z-index issue

--- a/templates/admin_dashboard/css/core.css
+++ b/templates/admin_dashboard/css/core.css
@@ -1,6 +1,6 @@
 * { margin:0; padding:0; list-style:none; }
 body { background:#000 url(../images/msadmin_dash_bg.gif) left top repeat-x; font:12px Arial, Helvetica, sans-serif; color:#333; text-align:center; }
-#msadmin_wrapper { min-width:950px; padding:40px 20px 0; }
+#msadmin_wrapper { position:relative; min-width:950px; padding:40px 20px 0; z-index:0; }
 #msadmin_section { overflow:hidden; width:100%; min-height:500px; background:#fff; text-align:left; margin:0 auto; border-radius:13px 13px 0 0; }
 #msadmin_content { padding:20px; }
 #msadmin_content .shadowbox { overflow:auto; width:100%; }
